--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
+/*.App {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*}*/
 
-.App > div {
-  margin-right: 50px;
-}
-.active-filter {
-  background-color: cadetblue;
-}
-.is-done {
-  opacity: 0.5;
-}
-.error {
-  border: 2px solid red;
-}
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
+/*.active-filter {*/
+/*  background-color: cadetblue;*/
+/*}*/
+/*.is-done {*/
+/*  opacity: 0.5;*/
+/*}*/
+/*.error {*/
+/*  border: 2px solid red;*/
+/*}*/
